상품상세, 상품검색 작업중

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,12 @@
 					<td>작업중</td>
 				</tr>
 				<tr>
+					<td>Product > 상품후기</td>
+					<td>PC_SHP_1001</td>
+					<td><a href="./product/PC_SHP_1004.html" target="_blank">./product/PC_SHP_1004.html</a></td>
+					<td>작업중</td>
+				</tr>
+				<tr>
 					<td>검색</td>
 					<td>PC_ODR_1001</td>
 					<td><a href="./search/PC_ODR_1001.html" target="_blank">./search/PC_ODR_1001.html</a></td>
