--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -57,11 +57,7 @@
 						</div>
 
 						<!-- option -->
-						<a href="#product__option" class="mo__fixed__option">
-							<p class="product__opt--title">OPTION</p>
-							<p class="btn__buy">BUY</p>
-						</a>
-						<div id="product__option" class="product__option">
+						<div class="product__option">
 							<p class="product__opt--title">OPTION</p>
 							<ul class="product__opt--list">
 								<li><button class="opt__button opt__selected">F</button></li>
@@ -241,7 +237,7 @@
 							</div>
 
 							<div class="review__etc">
-								<a onclick="$('#Product_ReviewWrite').show();" class="btn__rvWrite">WRITE</a>
+								<a href="#" class="btn__rvWrite">WRITE</a>
 							</div>
 						</div>	
 
@@ -261,7 +257,7 @@
 											</p>
 										</div>
 									</a>
-									<a onclick="$('#Product_ReviewView').show();">
+									<a href="#">
 										<div class="rv__review">
 											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요 
 												예뻐용 매장에서 피팅해보구 주문했는데 청바지에두 예쁘구 평일 출근룩 교복템이에용
@@ -303,7 +299,7 @@
 											</p>
 										</div>
 									</a>
-									<a onclick="$('#Product_ReviewView').show();">
+									<a href="#">
 										<div class="rv__review">
 											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요</p>
 											<p class="rv__thumnb">
@@ -341,7 +337,7 @@
 											</p>
 										</div>
 									</a>
-									<a onclick="$('#Product_ReviewView').show();">
+									<a href="#">
 										<div class="rv__review">
 											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요 
 												예뻐용 매장에서 피팅해보구 주문했는데 청바지에두 예쁘구 평일 출근룩 교복템이에용
@@ -478,192 +474,15 @@
 		</div>
 
 		<!-- 리뷰등록 팝업 //-->
-		<div module="" id="Product_ReviewWrite" class="layer__body product_reviewwrite">
+		<div module="Product_BasketAdd" id="Product_BasketAdd" class="layer__body product_basketadd" style="display: block">
 			<div class="layer__wrap">
-				<div class="layer__close"><a onclick="$('#Product_ReviewWrite').hide();" class="btn__close"><span class="a11y">닫기</span></a></div>
+				<div class="layer__close"><a onclick="$('#Product_BasketAdd').hide();" class="btn__close"><span class="a11y">닫기</span></a></div>
 				<div class="layer__content">
-					<div class="rv__product">
-						<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
-						<div class="rv__box">
-							<p class="rv__prname">Rinen Striped Jacket</p>
-							<div class="rv__prcnt">
-								<p>리뷰 999</p>
-								<p>평점 4.8</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="rv__grade">
-						<dl class="table__form form__margin">
-							<dt>별점입력</dt>
-							<dd>
-								<div class="rv_star">
-									<span class="ic_star"></span>
-									<span class="ic_star"></span>
-									<span class="ic_star"></span>
-									<span class="ic_star_half"></span>
-									<span class="ic_star_blank"></span>
-								</div>
-							</dd>
-						</dl>
-					</div>
-
-					<div class="rv__photo">
-						<ul class="rv_photo_list">
-							<li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
-								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
-							</li>
-							<li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
-								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
-							</li>
-							<li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
-								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
-							</li>
-							<li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
-								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
-							</li>
-							<!-- <li>
-								<img class="figure" title="" src="/web/assets/images/temp/@product01.png">
-								<button type="button" class="btn__delete"><span class="a11y">삭제</span></button>
-							</li> -->
-							<li>
-								<button class="btn__addphoto"><i></i><span>사진추가</span></button>
-							</li>
-						</ul>
-
-						<!-- <button class="btn__addphoto"><i></i><span>사진추가</span></button> -->
-					</div>
-
-					<div class="rv__additem">
-						<dl class="table__form">
-							<dt>신장</dt>
-							<dd>
-								<select>
-									<option>선택</option>
-									<option>150미만</option>
-									<option>150~155</option>
-								</select>
-							</dd>
-						</dl>
-						<dl class="table__form">
-							<dt>몸무게</dt>
-							<dd>
-								<select>
-									<option>선택</option>
-									<option>40kg미만</option>
-									<option>41~45</option>
-								</select>
-							</dd>
-						</dl>
-						<dl class="table__form">
-							<dt>착용사이즈</dt>
-							<dd>
-								<select>
-									<option>선택</option>
-									<option>44</option>
-									<option>55</option>
-								</select>
-							</dd>
-						</dl>
-						<dl class="table__form align__top">
-							<dt>내용</dt>
-							<dd>
-								<textarea placeholder="내용을 입력하세요"></textarea>
-							</dd>
-						</dl>
-						<dl class="table__form form__margin">
-							<dt>SNS로 퍼가기</dt>
-							<dd>
-								<input type="checkbox" id="post_sns" /><label for="post_sns">허용</label>
-							</dd>
-						</dl>
-					</div>
-					<div class="layer__button">
-						<a onclick="$('#Product_ReviewWrite').hide();" class="btn btn_rvwrite">리뷰작성</a>
-					</div>
 				</div>
 			</div>
 		</div>
+		
 
-		<!-- 리뷰상세 팝업 //-->
-		<div module="" id="Product_ReviewView" class="layer__body product_reviewview">
-			<div class="layer__wrap">
-				<div class="layer__close"><a onclick="$('#Product_ReviewView').hide();" class="btn__close"><span class="a11y">닫기</span></a></div>
-				<div class="layer__content">
-					<div class="cont_detail">
-						<div class="rv__product">
-							<p class="rv__figure"><img src="/web/assets/images/temp/@product01.png"></p>
-							<div class="rv__box">
-								<p class="rv__prname">Rinen Striped Jacket</p>
-								<div class="rv__prcnt">
-									<p>2022-04-26 14:25</p>
-									<p>리뷰 999</p>
-									<p>평점 4.8</p>
-								</div>
-							</div>
-						</div>
-						<div class="review__text">
-							완전만족 대만족 하고있어요 올여름 더 덥다길래 찾다
-							이아이를 발견햇어요 역시 여름에는 시원한 파란색이죠
-							약간 학생같은 느낌으로 입고다니기 딱좋아요 세일기간
-							에 사서 저렴하게 산것같아 기분이 2배로 좋아요
-							꼭사세요 두번사세요
-						</div>
-						<div class="review__image">
-							<img src="https://reviewtalktalk.poxo.com/instantfunk/2022/07/06/9796e59eda95c6e7b8937dce72dde644.jpg" alt="20220706_205446.jpg" onerror="this.src='//img.echosting.cafe24.com/skin/base/board/review/@img_thumb.gif';">
-						</div>
-
-						<div class="review__etc">
-							<div class="rv__moreinfo">
-								<p class="info_tag">158~168cm</p>
-								<p class="info_tag">40~48kg</p>
-								<p class="info_tag">M</p>
-								
-								<div class="rv__morebtn">
-									<button type="button" class="btn__rvlike"></button>
-									<button type="button" class="btn__rvshare"><span class="a11y">공유하기</span></button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="cont_summary">
-						<p class="review__writter"><span>ININ******</span> 님의 리뷰</p>
-
-						<div class="rv_star">
-							<span class="ic_star"></span>
-							<span class="ic_star"></span>
-							<span class="ic_star"></span>
-							<span class="ic_star"></span>
-							<span class="ic_star_blank"></span>
-						</div>
-						<div class="rv__prcnt">
-							<p>댓글 999</p>
-							<p>좋아요 999</p>
-							<p>조회수 999</p>
-						</div>
-
-						<div class="rv__other">
-							<p class="other__title">다른 상품 리뷰</p>
-							<ul class="other__list">
-								<li><a href="#"><img src="https://reviewtalktalk.poxo.com/instantfunk/2022/07/06/thumb_list/471992148cd742b0d1d29ea347cd2d0d.jpg" alt="16571100442846343464759775099488.jpg" onerror="this.src='//img.echosting.cafe24.com/skin/base/board/review/@img_thumb.gif';"></a></li>
-								<li><a href="#"><img src="https://reviewtalktalk.poxo.com/instantfunk/2022/07/06/thumb_list/471992148cd742b0d1d29ea347cd2d0d.jpg" alt="16571100442846343464759775099488.jpg" onerror="this.src='//img.echosting.cafe24.com/skin/base/board/review/@img_thumb.gif';"></a></li>
-								<li><a href="#"><img src="https://reviewtalktalk.poxo.com/instantfunk/2022/07/06/thumb_list/471992148cd742b0d1d29ea347cd2d0d.jpg" alt="16571100442846343464759775099488.jpg" onerror="this.src='//img.echosting.cafe24.com/skin/base/board/review/@img_thumb.gif';"></a></li>
-							</ul>
-						</div>
-						<div class="rv__other">
-							<p class="other__title">최근 리뷰에 남긴 #태그</p>
-							<span class="other__tag">최근 리뷰에 남긴 #태그가 없습니다.</span>
-							<a href="#" class="other__tag">#청바지</a><a href="#" class="other__tag">#스타일</a>
-							<a href="#" class="other__tag">#인스턴트펑크</a><a href="#" class="other__tag">#스타일</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 		
 		@@include('../inc/footer.inc', {
 			"webroot": ".."
