상품상세 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -76,8 +76,29 @@
 
 							<div class="product__quantity">
 								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.gif" alt="수량감소"></a>
-								<input type="text" value="1" class="qty_input" />
+								<input type="text" value="1" class="qty_input" maxlength="3" />
 								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.gif" alt="수량증가"></a>
+							</div>
+						</div>
+
+						<!-- option list -->
+						<div class="option__list">
+							<div class="option__item">
+								<div class="product__name">
+									22SS 레이어드 크롭 자켓 그레이 
+								</div>
+								<div class="product__etc">
+									<div class="qty__wrap">
+										<div class="product__quantity">
+											<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.gif" alt="수량감소"></a>
+											<input type="text" value="1" class="qty_input" maxlength="3" />
+											<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.gif" alt="수량증가"></a>
+										</div>
+									</div>
+									<div class="product__price">
+										<p>₩384,000</p>
+									</div>
+								</div>
 							</div>
 						</div>
 
