상품상세 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -68,36 +68,60 @@
 								<li><button class="opt__button">S</button></li>
 								<li><button class="opt__button">M</button></li>
 								<li><button class="opt__button">L</button></li>
-								<li><button class="opt__button">XL</button></li>
+								<li><button class="opt__button" disabled>XL</button></li>
 							</ul>
 							<!-- <ul class="product__opt--list">
 								<li><a class="opt__button opt__selected">F</a></li>
 							</ul> -->
 
 							<div class="product__quantity">
-								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.gif" alt="수량감소"></a>
+								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.png" alt="수량감소"></a>
 								<input type="text" value="1" class="qty_input" maxlength="3" />
-								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.gif" alt="수량증가"></a>
+								<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.png" alt="수량증가"></a>
 							</div>
-						</div>
 
-						<!-- option list -->
-						<div class="option__list">
-							<div class="option__item">
-								<div class="product__name">
-									22SS 레이어드 크롭 자켓 그레이 
-								</div>
-								<div class="product__etc">
-									<div class="qty__wrap">
-										<div class="product__quantity">
-											<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.gif" alt="수량감소"></a>
-											<input type="text" value="1" class="qty_input" maxlength="3" />
-											<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.gif" alt="수량증가"></a>
+							<!-- option list -->
+							<div class="option__list">
+								<div class="option__item">
+									<div class="product__name">
+										22SS 레이어드 크롭 자켓 그레이 
+									</div>
+									<div class="product__etc">
+										<div class="qty__wrap">
+											<div class="product__quantity">
+												<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.png" alt="수량감소"></a>
+												<input type="text" value="1" class="qty_input" maxlength="3" />
+												<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.png" alt="수량증가"></a>
+											</div>
+											<a href="#" class="btn__delete"><span class="a11y">삭제</span></a>
+										</div>
+										<div class="product__price">
+											<p>₩384,000</p>
 										</div>
 									</div>
-									<div class="product__price">
-										<p>₩384,000</p>
+								</div>
+								<div class="option__item">
+									<div class="product__name">
+										22SS 레이어드 크롭 자켓 그레이 레이어드 크롭 자켓 그레이
 									</div>
+									<div class="product__etc">
+										<div class="qty__wrap">
+											<div class="product__quantity">
+												<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_down.png" alt="수량감소"></a>
+												<input type="text" value="1" class="qty_input" maxlength="3" />
+												<a href="#" class="qty_button"><img src="/web/assets/images/btn_count_up.png" alt="수량증가"></a>
+											</div>
+											<a href="#" class="btn__delete"><span class="a11y">삭제</span></a>
+										</div>
+										<div class="product__price">
+											<p>₩384,000</p>
+										</div>
+									</div>
+								</div>
+
+								<div class="product__totalprice">
+									<p class="total__title">합계(수량)</p>
+									<p class="total__price">₩326,000<span>(3)</span></p>
 								</div>
 							</div>
 						</div>
