--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -5,9 +5,9 @@
 		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 상품목록",
 		"webroot": "."
 	})
-	<script src="/web/assets/js/modernizr.js"></script>
-	<script src="/web/assets/js/product.js"></script>
-	<link rel="stylesheet" href="/web/assets/css/product.css">
+	<script src="web/assets/js/modernizr.js"></script>
+	<script src="web/assets/js/product.js"></script>
+	<link rel="stylesheet" href="web/assets/css/product.css">
 </head>
 <body>
 	<div id="wrap">
@@ -50,10 +50,10 @@
 												<div class="menu__swiper swiper-container">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/product.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -84,9 +84,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -149,10 +149,10 @@
 												<div class="menu__swiper swiper-container">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/product.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/product.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -183,9 +183,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -223,10 +223,10 @@
 												<div class="menu__swiper swiper-container">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/dummy.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/dummy.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -257,9 +257,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -297,10 +297,10 @@
 												<div class="menu__swiper swiper-container">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/dummy.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/dummy.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -331,9 +331,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -371,10 +371,10 @@
 												<div class="menu__swiper swiper-container">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/dummy.png" alt="상품"></div>
 														</li>
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+															<div class="menu__img"><img src="web/assets/images/dummy.png" alt="상품"></div>
 														</li>
 													</ul>
 													<div class="swiper-pagination"></div>
@@ -405,9 +405,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="../web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="../web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
