검색 > 제품목록 수정

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -84,9 +84,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -183,9 +183,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -257,9 +257,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -331,9 +331,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
@@ -405,9 +405,9 @@
 														</div>
 													</div>
 													<div class="menu__count">
-														<button type="button" class="menu__button"><img src="..web/assets/images/btn_count_down.gif" alt=""></button>
+														<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
 														<span class="menu__current">1</span>
-														<button type="button"><img src="..web/assets/images/btn_count_up.gif" alt=""></button>
+														<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
 													</div>
 													<div class="menu__buttons">
 														<button type="button" class="menu__button">ADD TO CART</button>
