--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -5,6 +5,8 @@
 		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 검색",
 		"webroot": "."
 	})
+	<script src="/web/assets/js/modernizr.js"></script>
+	<script src="/web/assets/js/product.js"></script>
 	<link rel="stylesheet" href="/web/assets/css/search.css">
 </head>
 <body>
@@ -23,31 +25,78 @@
 						<div class="menu__container">
 							<ul class="menu__list">
 								<li class="menu__item">
-									<a href="#" class="menu__link">
-										<div class="menu__round">
-											<div class="menu__inner">
+									<div class="menu__round">
+										<div class="menu__inner">
+											<a href="#" class="menu__link">
+												<div class="menu__colors">
+													<span class="menu__color"></span>
+													<span class="menu__color"></span>
+													<span class="menu__color"></span>
+												</div>
 												<div class="menu__swiper swiper-container">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 														</li>
+														<li class="swiper-slide">
+															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+														</li>
 													</ul>
+													<div class="swiper-pagination"></div>
+												</div>
+											</a>
+											<div class="menu__layer">
+												<div class="menu__dimmed"></div>
+												<div class="menu__buttons">
+													<button type="button" class="menu__button menu__button--cart">CART</button>
+													<a href="#" class="menu__button">DETAIL</a>
+												</div>
+												<div class="menu__option">
+													<div class="menu__sizes">
+														<div>
+															<button type="button" class="menu__size menu__size--selected">F</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">S</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">M</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">L</button>
+														</div>
+														<div> 
+															<button type="button" class="menu__size menu__size--disabled">XL</button>
+														</div>
+													</div>
+													<div class="menu__count">
+														<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
+														<span class="menu__current">1</span>
+														<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
+													</div>
+													<div class="menu__buttons">
+														<button type="button" class="menu__button">ADD TO CART</button>
+													</div>
+													<button class="menu__close">
+														<span class="a11y">닫기</span>
+													</button>
 												</div>
 											</div>
 										</div>
-									</a>
+									</div>
 									<div class="menu__info">
 										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 										<div class="menu__right">
+											<span class="menu__event">COUPON</span>
 											<p class="menu__discount">₩46,000</p>
 											<p class="menu__price">₩50,000(30%)</p>
 										</div>
 									</div>
 								</li>
 								<li class="menu__item">
-									<a href="#" class="menu__link menu__link--none">
-										<div class="menu__round">
-											<div class="menu__inner">
+									<div class="menu__round">
+										<div class="menu__inner">
+											<a href="#" class="menu__link menu__link--none">
 												<!-- soldout -->
 												<div class="marquee">
 													<div class="marquee__mask">
@@ -78,42 +127,140 @@
 													</div>
 												</div>
 												<!-- // soldout -->
+												<div class="menu__colors">
+													<span class="menu__color"></span>
+													<span class="menu__color"></span>
+													<span class="menu__color"></span>
+												</div>
 												<div class="menu__swiper swiper-container">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
 															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
 														</li>
+														<li class="swiper-slide">
+															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+														</li>
 													</ul>
+													<div class="swiper-pagination"></div>
+												</div>
+											</a>
+											<div class="menu__layer">
+												<div class="menu__dimmed"></div>
+												<div class="menu__buttons">
+													<button type="button" class="menu__button menu__button--cart">CART</button>
+													<a href="#" class="menu__button">DETAIL</a>
+												</div>
+												<div class="menu__option">
+													<div class="menu__sizes">
+														<div>
+															<button type="button" class="menu__size menu__size--selected">F</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">S</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">M</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">L</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size menu__size--disabled">XL</button>
+														</div>
+													</div>
+													<div class="menu__count">
+														<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
+														<span class="menu__current">1</span>
+														<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
+													</div>
+													<div class="menu__buttons">
+														<button type="button" class="menu__button">ADD TO CART</button>
+													</div>
+													<button class="menu__close">
+														<span class="a11y">닫기</span>
+													</button>
 												</div>
 											</div>
 										</div>
-									</a>
+									</div>
 									<div class="menu__info">
 										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 										<div class="menu__right">
-											<span class="menu__coupon">COUPON</span>
+											<span class="menu__event">COUPON</span>
 											<p class="menu__price">₩50,000</p>
 										</div>
 									</div>
 								</li>
 								<li class="menu__item">
-									<a href="#" class="menu__link">
-										<div class="menu__round">
-											<div class="menu__inner">
+									<div class="menu__round">
+										<div class="menu__inner">
+											<a href="#" class="menu__link">
+												<div class="menu__tags">
+													<span class="menu__tag menu__tag--celeb">
+														<i></i>
+														CELEB
+													</span>
+												</div>
+												<div class="menu__colors">
+													<span class="menu__color"></span>
+													<span class="menu__color"></span>
+													<span class="menu__color"></span>
+												</div>
 												<div class="menu__swiper swiper-container">
 													<ul class="swiper-wrapper">
 														<li class="swiper-slide">
-															<div class="menu__img"><img src="/web/assets/images/product.png" alt="상품"></div>
+															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
+														</li>
+														<li class="swiper-slide">
+															<div class="menu__img"><img src="/web/assets/images/dummy.png" alt="상품"></div>
 														</li>
 													</ul>
+													<div class="swiper-pagination"></div>
+												</div>
+											</a>
+											<div class="menu__layer">
+												<div class="menu__dimmed"></div>
+												<div class="menu__buttons">
+													<button type="button" class="menu__button menu__button--cart">CART</button>
+													<a href="#" class="menu__button">DETAIL</a>
+												</div>
+												<div class="menu__option">
+													<div class="menu__sizes">
+														<div>
+															<button type="button" class="menu__size menu__size--selected">F</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">S</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">M</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size">L</button>
+														</div>
+														<div>
+															<button type="button" class="menu__size menu__size--disabled">XL</button>
+														</div>
+													</div>
+													<div class="menu__count">
+														<button type="button" class="menu__button"><img src="/web/assets/images/btn_count_down.gif" alt=""></button>
+														<span class="menu__current">1</span>
+														<button type="button"><img src="/web/assets/images/btn_count_up.gif" alt=""></button>
+													</div>
+													<div class="menu__buttons">
+														<button type="button" class="menu__button">ADD TO CART</button>
+													</div>
+													<button class="menu__close">
+														<span class="a11y">닫기</span>
+													</button>
 												</div>
 											</div>
 										</div>
-									</a>
+									</div>
 									<div class="menu__info">
 										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 										<div class="menu__right">
-											<span class="menu__coupon">COUPON</span>
+											<span class="menu__event">COUPON</span>
 											<p class="menu__price">₩50,000</p>
 										</div>
 									</div>
