메인 베스트셀러 모션 추가

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -128,32 +128,58 @@
 				</div>
 			</div>
 			<div class="best-menu">
-				<div class="marquee">
-					<div class="marquee__mask">
-						<p class="marquee__loop">
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-						</p>
-						<p class="marquee__loop">
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-						</p>
-						<p class="marquee__loop">
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-						</p>
-						<p class="marquee__loop">
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-						</p>
+				<div class="cube">
+					<div class="cube__face cube__face--front">
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+					</div>
+					<div class="cube__face cube__face--top">
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+					</div>
+					<div class="cube__face cube__face--back">
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+					</div>
+					<div class="cube__face cube__face--bottom">
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
 					</div>
 				</div>
 				<div class="best-menu__container">
@@ -391,36 +417,58 @@
 						</div>
 					</div>
 				</div>
-				<div class="marquee">
-					<div class="marquee__mask">
-						<p class="marquee__loop">
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-						</p>
-						<p class="marquee__loop">
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-							<span class="marquee__text">BEST</span>
-						</p>
+				<div class="cube">
+					<div class="cube__face cube__face--front">
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+					</div>
+					<div class="cube__face cube__face--top">
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+					</div>
+					<div class="cube__face cube__face--back">
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+						<span class="cube__text">BEST</span>
+					</div>
+					<div class="cube__face cube__face--bottom">
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
+						<span class="cube__text">SELLER</span>
 					</div>
 				</div>
 			</div>
